security-group.tf
# Create edward security group
resource "aws_security_group" "edward-security-group" {
  name        = "edward-security-group"
  description = "enable ssh, http and https access on port"
  vpc_id      = aws_vpc.edward-vpc.id

  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "https access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "edward-security-group"
  }

}
